Place ellipsis correctly when it's at the edge of a mixed-direction box

Place ellipsis correctly when we want to place it at the end of a box that
has a text direction opposite to that of its containing flow.

BUG=645938

Review-Url: https://codereview.chromium.org/2367423004
Cr-Commit-Position: refs/heads/master@{#422212}

Former-commit-id: 9dbb17e178481b65239258b91cf42d6a73a5d990